--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
 version: '3.1'
 services:
   stats-server:
+    build: stats
+    container_name: stats
     ports:
       - "9090:9090"
+    depends_on:
+      - stats-db
+    environment:
+      - SPRING_DATASOURCE_URL = jdbc:postgresql://stats-db:5432/statsdb
+      - DB_NAME=statsdb
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=root
+
 
   stats-db:
     image: postgres:14-alpine
-
-  ewm-service:
     ports:
-      - "8080:8080"
+        - "6543:5432"
+    environment:
+        - POSTGRES_DB=statsdb
+        - POSTGRES_USER=root
+        - POSTGRES_PASSWORD=root
+#  ewm-service:
+#    ports:
+#      - "8080:8080"
+#
+#  ewm-db:
+#    image: postgres:14-alpine
 
-  ewm-db:
-    image: postgres:14-alpine
+
+
