--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL = jdbc:postgresql://stats-db:5432/statsdb
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/statsdb
       - DB_NAME=statsdb
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
