--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     depends_on:
       - stats-db
     environment:
-      - SPRING_DATASOURCE_URL = jdbc:postgresql://stats-db:5432/statsdb
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/statsdb
       - DB_NAME=statsdb
       - POSTGRES_USER=root
       - POSTGRES_PASSWORD=root
@@ -22,12 +22,16 @@ services:
         - POSTGRES_DB=statsdb
         - POSTGRES_USER=root
         - POSTGRES_PASSWORD=root
-#  ewm-service:
-#    ports:
-#      - "8080:8080"
-#
-#  ewm-db:
-#    image: postgres:14-alpine
+  ewm-service:
+    build: main
+    container_name: main
+
+
+    ports:
+      - "8080:8080"
+
+  ewm-db:
+    image: postgres:14-alpine
 
 
 
